@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Private tags returned by C-FIND SCP (cf. option "DefaultPrivateCreator")
+* Packaging of the Orthanc framework library
 
 Plugins
 -------
